# dt-vbc-ibc

./: README.md  pyproject.toml  requirements.txt
experiments/: common.py  plot_utils.py  run_all.py  run_all_sampled_lp.py  run_all_sos.py  sampled_vbc.py  systems.py
experiments/cases/: case1_forward_backward_vbc.py  case1_forward_dt_vbc.py  case2_backward_dt_vbc.py  case2_bibc_bridge.py  case3_bibc_bridge.py
experiments/cases/configs/: case1_forward.yaml  case1_linear2d.yaml  case2_backward.yaml  case2_bibc.yaml
results/: sos_results.csv
results/data/: case1_forward_grid.csv  case2_backward_grid.csv  case3_bibc_series.csv  case3_encoding_summary.json  case3_sparse_matrix_A.csv  comparison_details.json  formulation_comparison.csv  sos_comparison.csv  sos_details.json  summary.json
results/tables/: sos_results_summary.csv  sos_summary.csv
src/dt_vbc/: common.py  plotting.py  plotting_sos.py  poly_basis.py  polynomials.py  sos_utils.py  synthesis_lp.py  synthesis_sos.py  systems.py  systems_sos.py
src/dt_vbc_ibc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
